Wed May 28 23:08:23 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/server/server.c: fix possible NULL access

Wed May 28 22:08:36 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/apps/tsql.c:
	- fix minor memory leaks

Wed May 28 09:41:16 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac src/apps/tsql.c  
	- reset getopt(3) portably

Tue May 27 18:21:46 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/tds.h include arpa/inet.h

Tue May 27 10:23:00 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: compile fix
	* src/tds/numeric.c: add test to avoid future buffer overflows

Tue May 27 10:00:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: fix possible buffer overflow

Mon May 26 15:56:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	(monstly from Coverity reports)
	* include/tdsbytes.h: remove warning
	* src/apps/tsql.c src/dblib/bcp.c src/dblib/dblib.c:
	- remove some leaks
	* src/tds/mem.c: avoid deference of null pointer

Wed May 21 23:51:21 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/odbc/unittests/common.c
	* vms/config_h.vms vms/descrip_mms.template
	- applied ML patch from Craig A. Berry

Wed May 21 21:13:31 EDT 2008	JK Lowden <jklowden@freetds.org>
	* TODO doc/api_status.txt src/ctlib/ct.c
	- Blindly applied suggestion from S. Magne on ML 
	- to fix ct_cancel for CS_CANCEL_ALL

Thu May 15 11:43:18 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac corrected odbc_nodm help string

Tue May 13 10:02:37 EDT 2008	JK Lowden <jklowden@freetds.org>
	* doc/htdoc/faq.html added libtds.so question

Sun May 11 19:40:29 EDT 2008	Nick Castellano <entropy@freetds.org>
	* src/replacements/readpassphrase.c:
	- cast to unsigned char when calling ctype macros

Fri May  9 14:47:15 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/apps/osql handles 'server = ipaddr' in odbc.ini

Thu May  8 14:29:50 EDT 2008	JK Lowden <jklowden@freetds.org>