@@ -1,3 +1,7 @@
+Fri May 30 17:47:59 EDT 2008	JK Lowden <jklowden@freetds.org>
+	* include/cspublic.h 
+	- applied ML patch of 19 May 2008 for BLK_VERSION for sqsh
+
 Wed May 28 23:08:23 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/server/server.c: fix possible NULL access
 
@@ -320,4 +324,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2529 2008-05-28 21:08:32 freddy77 Exp $
+$Id: ChangeLog,v 1.2530 2008-06-02 14:18:44 jklowden Exp $
